--- a/remote-control/.cargo/config.toml
+++ b/remote-control/.cargo/config.toml
@@ -1,9 +1,9 @@
 [target.'cfg(all(target_arch = "arm", target_os = "none"))']
-# replace STM32F103C8 with your chip as listed in `probe-rs chip list`
-runner = "probe-rs run --chip STM32F103C8"
+# runner = "probe-rs run --chip RP2040"
+runner = "elf2uf2-rs"
 
 [build]
-target = "thumbv7m-none-eabi"
+target = "thumbv6m-none-eabi"        # Cortex-M0 and Cortex-M0+
 
 [env]
-DEFMT_LOG = "trace"
+DEFMT_LOG = "debug"
