--- a/remote-control/Cargo.toml
+++ b/remote-control/Cargo.toml
@@ -8,29 +8,65 @@ description = "2 DOF Camera Robot"
 repository = "https://github.com/tutla53/2dof-robot"
 
 [dependencies]
-# Change stm32f103c8 to your chip name, if necessary.
-embassy-stm32 = { version = "0.1.0", path = "../embassy/embassy-stm32", features = [ "defmt", "stm32f103c8", "unstable-pac", "memory-x", "time-driver-any" ]  }
+embassy-embedded-hal = { version = "0.2.0", path = "../embassy/embassy-embedded-hal", features = ["defmt"] }
 embassy-sync = { version = "0.6.0", path = "../embassy/embassy-sync", features = ["defmt"] }
-embassy-executor = { version = "0.6.3", path = "../embassy/embassy-executor", features = ["arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
-embassy-time = { version = "0.3.2", path = "../embassy/embassy-time", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
+embassy-executor = { version = "0.6.3", path = "../embassy/embassy-executor", features = ["task-arena-size-98304", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
+embassy-time = { version = "0.3.2", path = "../embassy/embassy-time", features = ["defmt", "defmt-timestamp-uptime"] }
+embassy-rp = { version = "0.2.0", path = "../embassy/embassy-rp", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
 embassy-usb = { version = "0.3.0", path = "../embassy/embassy-usb", features = ["defmt"] }
 embassy-futures = { version = "0.1.0", path = "../embassy/embassy-futures" }
+embassy-usb-logger = { version = "0.2.0", path = "../embassy/embassy-usb-logger" }
 
 defmt = "0.3"
 defmt-rtt = "0.4"
+fixed = "1.23.1"
+fixed-macro = "1.2"
 
+# for assign resources example
 assign-resources = { git = "https://github.com/adamgreig/assign-resources", rev = "94ad10e2729afdf0fd5a77cd12e68409a982f58a" }
 
-cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
-cortex-m-rt = "0.7.0"
-embedded-hal = "0.2.6"
-panic-probe = { version = "0.3", features = ["print-defmt"] }
 heapless = { version = "0.8", default-features = false }
-nb = "1.0.0"
-static_cell = "2.0.0"
 
-[profile.dev]
-opt-level = "s"
+#cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
+cortex-m = { version = "0.7.6", features = ["inline-asm"] }
+cortex-m-rt = "0.7.0"
+critical-section = "1.1"
+panic-probe = { version = "0.3", features = ["print-defmt"] }
+mipidsi = "0.8.0"
+byte-slice-cast = { version = "1.2.0", default-features = false }
+rand_core = "0.6.4"
+
+embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
+embedded-hal-async = "1.0"
+embedded-hal-bus = { version = "0.1", features = ["async"] }
+embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
+embedded-storage = { version = "0.3" }
+static_cell = "2.1"
+portable-atomic = { version = "1.5", features = ["critical-section"] }
+log = "0.4"
+pio-proc = "0.2"
+pio = "0.2.1"
+rand = { version = "0.8.5", default-features = false }
+embedded-sdmmc = "0.7.0"
+
+bt-hci = { version = "0.1.0", default-features = false, features = ["defmt"] }
+trouble-host = { version = "0.1.0", features = ["defmt", "gatt"] }
 
 [profile.release]
 debug = 2
+lto = true
+opt-level = 'z'
+
+[profile.dev]
+debug = 2
+lto = true
+opt-level = "z"
+
+[patch.crates-io]
+trouble-host = { git = "https://github.com/embassy-rs/trouble.git", rev = "4b8c0f499b34e46ca23a56e2d1640ede371722cf" }
+embassy-executor = { path = "../embassy/embassy-executor" }
+embassy-sync = { path = "../embassy/embassy-sync" }
+embassy-futures = { path = "../embassy/embassy-futures" }
+embassy-time = { path = "../embassy/embassy-time" }
+embassy-time-driver = { path = "../embassy/embassy-time-driver" }
+embassy-embedded-hal = { path = "../embassy/embassy-embedded-hal" }
