--- a/remote-control/Cargo.toml
+++ b/remote-control/Cargo.toml
@@ -8,14 +8,17 @@ description = "2 DOF Camera Robot"
 repository = "https://github.com/tutla53/2dof-robot"
 
 [dependencies]
-embassy-embedded-hal = { version = "0.2.0", path = "../embassy/embassy-embedded-hal", features = ["defmt"] }
-embassy-sync = { version = "0.6.0", path = "../embassy/embassy-sync", features = ["defmt"] }
-embassy-executor = { version = "0.6.3", path = "../embassy/embassy-executor", features = ["task-arena-size-98304", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
-embassy-time = { version = "0.3.2", path = "../embassy/embassy-time", features = ["defmt", "defmt-timestamp-uptime"] }
-embassy-rp = { version = "0.2.0", path = "../embassy/embassy-rp", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
-embassy-usb = { version = "0.3.0", path = "../embassy/embassy-usb", features = ["defmt"] }
-embassy-futures = { version = "0.1.0", path = "../embassy/embassy-futures" }
-embassy-usb-logger = { version = "0.2.0", path = "../embassy/embassy-usb-logger" }
+embassy-embedded-hal = {git = "https://github.com/embassy-rs/embassy", features = ["defmt"] }
+embassy-sync = { git = "https://github.com/embassy-rs/embassy", features = ["defmt"] }
+embassy-executor = { git = "https://github.com/embassy-rs/embassy", features = ["task-arena-size-98304", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
+embassy-time = {git = "https://github.com/embassy-rs/embassy", features = ["defmt", "defmt-timestamp-uptime"] }
+embassy-rp = {git = "https://github.com/embassy-rs/embassy", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
+embassy-usb = { git = "https://github.com/embassy-rs/embassy", features = ["defmt"] }
+embassy-futures = { git = "https://github.com/embassy-rs/embassy" }
+embassy-usb-logger = { git = "https://github.com/embassy-rs/embassy" }
+
+pio-proc = "0.2.2"
+pio = "0.2.1"
 
 defmt = "0.3"
 defmt-rtt = "0.4"
@@ -44,8 +47,6 @@ embedded-storage = { version = "0.3" }
 static_cell = "2.1"
 portable-atomic = { version = "1.5", features = ["critical-section"] }
 log = "0.4"
-pio-proc = "0.2"
-pio = "0.2.1"
 rand = { version = "0.8.5", default-features = false }
 embedded-sdmmc = "0.7.0"
 
@@ -64,9 +65,9 @@ opt-level = "z"
 
 [patch.crates-io]
 trouble-host = { git = "https://github.com/embassy-rs/trouble.git", rev = "4b8c0f499b34e46ca23a56e2d1640ede371722cf" }
-embassy-executor = { path = "../embassy/embassy-executor" }
-embassy-sync = { path = "../embassy/embassy-sync" }
-embassy-futures = { path = "../embassy/embassy-futures" }
-embassy-time = { path = "../embassy/embassy-time" }
-embassy-time-driver = { path = "../embassy/embassy-time-driver" }
-embassy-embedded-hal = { path = "../embassy/embassy-embedded-hal" }
+embassy-rp = { git = "https://github.com/embassy-rs/embassy" }
+embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy" }
+embassy-sync = { git = "https://github.com/embassy-rs/embassy" }
+embassy-executor = { git = "https://github.com/embassy-rs/embassy" }
+embassy-time = { git = "https://github.com/embassy-rs/embassy" }
+embassy-futures = { git = "https://github.com/embassy-rs/embassy" }
