Move servo-pio library from local to github

--- a/robotic-arm-rp2040/Cargo.toml
+++ b/robotic-arm-rp2040/Cargo.toml
@@ -17,6 +17,9 @@ embassy-usb = { git = "https://github.com/embassy-rs/embassy", features = ["defm
 embassy-futures = { git = "https://github.com/embassy-rs/embassy" }
 embassy-usb-logger = { git = "https://github.com/embassy-rs/embassy" }
 
+# Servo Builder Library
+rp2040-servo-pio = {git = "https://github.com/tutla53/embassy-rp-library.git"}
+
 defmt = "0.3"
 defmt-rtt = "0.4"
 fixed = "1.23.1"
