--- a/remote-control/Cargo.toml
+++ b/remote-control/Cargo.toml
@@ -10,15 +10,15 @@ repository = "https://github.com/tutla53/2dof-robot"
 [dependencies]
 embassy-embedded-hal = {git = "https://github.com/embassy-rs/embassy", features = ["defmt"] }
 embassy-sync = { git = "https://github.com/embassy-rs/embassy", features = ["defmt"] }
-embassy-executor = { git = "https://github.com/embassy-rs/embassy", features = ["task-arena-size-98304", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
+embassy-executor = { git = "https://github.com/embassy-rs/embassy", features = ["task-arena-size-98304", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
 embassy-time = {git = "https://github.com/embassy-rs/embassy", features = ["defmt", "defmt-timestamp-uptime"] }
 embassy-rp = {git = "https://github.com/embassy-rs/embassy", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
 embassy-usb = { git = "https://github.com/embassy-rs/embassy", features = ["defmt"] }
 embassy-futures = { git = "https://github.com/embassy-rs/embassy" }
 embassy-usb-logger = { git = "https://github.com/embassy-rs/embassy" }
 
-pio-proc = "0.2.2"
-pio = "0.2.1"
+# Servo Builder Library
+rp2040-servo-pio = {git = "https://github.com/tutla53/embassy-rp-library.git"}
 
 defmt = "0.3"
 defmt-rtt = "0.4"
@@ -47,11 +47,10 @@ embedded-storage = { version = "0.3" }
 static_cell = "2.1"
 portable-atomic = { version = "1.5", features = ["critical-section"] }
 log = "0.4"
+pio-proc = "0.2"
+pio = "0.2.1"
 rand = { version = "0.8.5", default-features = false }
 embedded-sdmmc = "0.7.0"
-
-bt-hci = { version = "0.1.0", default-features = false, features = ["defmt"] }
-trouble-host = { version = "0.1.0", features = ["defmt", "gatt"] }
 
 [profile.release]
 debug = 2
@@ -64,7 +63,6 @@ lto = true
 opt-level = "z"
 
 [patch.crates-io]
-trouble-host = { git = "https://github.com/embassy-rs/trouble.git", rev = "4b8c0f499b34e46ca23a56e2d1640ede371722cf" }
 embassy-rp = { git = "https://github.com/embassy-rs/embassy" }
 embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy" }
 embassy-sync = { git = "https://github.com/embassy-rs/embassy" }
