--- a/robotic-arm-rp2040/Cargo.toml
+++ b/robotic-arm-rp2040/Cargo.toml
@@ -10,7 +10,7 @@ repository = "https://github.com/tutla53/2dof-robot"
 [dependencies]
 embassy-embedded-hal = {git = "https://github.com/embassy-rs/embassy", features = ["defmt"] }
 embassy-sync = { git = "https://github.com/embassy-rs/embassy", features = ["defmt"] }
-embassy-executor = { git = "https://github.com/embassy-rs/embassy", features = ["task-arena-size-98304", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
+embassy-executor = { git = "https://github.com/embassy-rs/embassy", features = ["task-arena-size-98304", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
 embassy-time = {git = "https://github.com/embassy-rs/embassy", features = ["defmt", "defmt-timestamp-uptime"] }
 embassy-rp = {git = "https://github.com/embassy-rs/embassy", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
 embassy-usb = { git = "https://github.com/embassy-rs/embassy", features = ["defmt"] }
@@ -18,7 +18,7 @@ embassy-futures = { git = "https://github.com/embassy-rs/embassy" }
 embassy-usb-logger = { git = "https://github.com/embassy-rs/embassy" }
 
 # Servo Builder Library
-rp2040-servo = {git = "https://github.com/tutla53/rp2040-servo-pwm"}
+rp2040-servo = {git = "https://github.com/tutla53/embassy-rp-library", version ="0.2.0"}
 
 defmt = "0.3"
 defmt-rtt = "0.4"
@@ -66,7 +66,7 @@ lto = true
 opt-level = "z"
 
 [patch.crates-io]
-trouble-host = { git = "https://github.com/embassy-rs/trouble.git", rev = "4b8c0f499b34e46ca23a56e2d1640ede371722cf" }
+trouble-host = { git = "https://github.com/embassy-rs/trouble.git"}
 embassy-rp = { git = "https://github.com/embassy-rs/embassy" }
 embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy" }
 embassy-sync = { git = "https://github.com/embassy-rs/embassy" }
